WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222420
[iOS] Crash when playing Dolby Atmos audio tracks with AVAudioTimePitchAlgorithmTimeDomain
https://bugs.webkit.org/show_bug.cgi?id=222420
Summary
[iOS] Crash when playing Dolby Atmos audio tracks with AVAudioTimePitchAlgori...
Jer Noble
Reported
2021-02-25 09:38:06 PST
[iOS] Crash when playing Dolby Atmos audio tracks with AVAudioTimePitchAlgorithmTimeDomain
Attachments
Patch
(5.63 KB, patch)
2021-02-25 09:40 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-02-25 09:38:24 PST
<
rdar://74612532
>
Jer Noble
Comment 2
2021-02-25 09:40:21 PST
Created
attachment 421534
[details]
Patch
EWS
Comment 3
2021-02-25 11:43:00 PST
Committed
r273498
: <
https://commits.webkit.org/r273498
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 421534
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug