Cherry-pick r273498. rdar://problem/74800989

[iOS] Crash when playing Dolby Atmos audio tracks with AVAudioTimePitchAlgorithmTimeDomain
    https://bugs.webkit.org/show_bug.cgi?id=222420
    <rdar://74612532>

    Reviewed by Eric Carlson.

    CoreAudio throws an assertion when using the TimeDomain pitch-correction algorithm on tracks
    with > 2 channels. To work around this assertion for now, only set the pitch-correction
    algorithm when the playbackRate is set to a non 0 or 1 value.

    * platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
    (WebCore::audioTimePitchAlgorithmForMediaPlayerPitchCorrectionAlgorithm):
    (WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayerItem):
    (WebCore::MediaPlayerPrivateAVFoundationObjC::setPlayerRate):
    (WebCore::MediaPlayerPrivateAVFoundationObjC::setPreservesPitch):
    (WebCore::MediaPlayerPrivateAVFoundationObjC::setPitchCorrectionAlgorithm):
    (WebCore::MediaPlayerPrivateAVFoundationObjC::playerItemStatusDidChange):

    Canonical link: https://commits.webkit.org/234575@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273498 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.298@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@273577 268f45cc-cd09-0410-ab3c-d52691b4dbfc